Fixed text and item alignment in restaurant list li and a

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ nav h1 a {
 }
 
 #restaurants-list p {
-  margin: 0;
+  text-align: center;
   font-size: 100%;
 }
 
@@ -208,11 +208,11 @@ nav h1 a {
   color: #fff;
   display: inline-block;
   font-size: 80%;
-  margin: 5% 0 0;
   padding: 1% 1% 1%;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  align-items: center;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -230,7 +230,6 @@ nav h1 a {
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
-  text-align: left;
   width: 270px;
 }
 #restaurants-list .restaurant-img {
